--- a/index.html
+++ b/index.html
@@ -485,31 +485,31 @@ presencia de mala alimentación y actividad física.
 A., Al-Jabir, A. (2020). <i style="background-color: #ffffff; color: #111111; font-size: 1rem;">La Organización
 Mundial de la Salud declara emergencia global: una revisión del nuevo
 coronavirus de 2019 (COVID-19)</i>. Revista Internacional de Cirugía, de https://doi.org/10.1016/j.ijsu.2020.02.034
-2.<br>
+<br>
           </li>
           <li><!--[endif]-->Organización Mundial de la Salud. (Dakota del Norte). <i>Nombrar la enfermedad por coronavirus
-(COVID-19) y el virus que la causa.</i> Actualización 15 de agosto 2020, de https://www.who.int/emergencies/diseases/novel-coronavirus-2019/technical-guidance/naming-the-coronavirus-disease-(covid-2019)-and-the-virus-that-causes-it <!--[if !supportLists]-->3.
+(COVID-19) y el virus que la causa.</i> Actualización 15 de agosto 2020, de https://www.who.int/emergencies/diseases/novel-coronavirus-2019/technical-guidance/naming-the-coronavirus-disease-(covid-2019)-and-the-virus-that-causes-it <!--[if !supportLists]-->
           </li>
           <li><!--[endif]-->Universidad Nacional Autonoma de Mexico
 (UNAM). <i>Casos Covid-19 en el mundo</i>.
-Actualización 12 de agosto 2020, de https://www.healthmap.org/covid-19/ <!--[if !supportLists]-->4.
+Actualización 12 de agosto 2020, de https://www.healthmap.org/covid-19/ <!--[if !supportLists]-->
           </li>
           <li><!--[endif]-->VERIFICOVID. (2020, Junio, 31). Veri_covid. <i>Vacunate contra la desinformación.</i> Revisado
-14 de agosto, 2020, de <a href="https://veri_covid.mx/">https://veri_covid.mx/</a><!--[if !supportLists]-->5.
+14 de agosto, 2020, de <a href="https://veri_covid.mx/">https://veri_covid.mx/</a><!--[if !supportLists]-->
           </li>
           <li><!--[endif]-->Secretaria de Salud. <i>Morbilidad y casos asociados con COVID-19,</i> revisado 14 de agosto
-2020, de https://www.gob.mx/salud/documentos/datos-abiertos-152127 <!--[if !supportLists]-->6.
+2020, de https://www.gob.mx/salud/documentos/datos-abiertos-152127 <!--[if !supportLists]-->
           </li>
           <li><!--[endif]-->Trilla, A.(2020).<i> Un mudo, una salud: la epidemia por el nuevo coronavirus COVID-19. </i>Revisado
 13 de agosto de 2020, de<i></i>
           </li>
           <li>
-            <a href="https://www.elsevier.es/es-revista-medicina-clinica-2-avance-resumen-un-mundo-una-salud-epidemia-S002577532030141X">https://www.elsevier.es/es-revista-medicina-clinica-2-avance-resumen-un-mundo-una-salud-epidemia-S002577532030141X</a><!--[if !supportLists]-->7.
+            <a href="https://www.elsevier.es/es-revista-medicina-clinica-2-avance-resumen-un-mundo-una-salud-epidemia-S002577532030141X">https://www.elsevier.es/es-revista-medicina-clinica-2-avance-resumen-un-mundo-una-salud-epidemia-S002577532030141X</a><!--[if !supportLists]-->
           </li>
           <li><!--[endif]-->Secretaría de Salud. (2020, 31 julio).</li>
           <li><i>Datos Abiertos - Direccion General
 de Epidemiologia</i>. gob.mx.
-https://www.gob.mx/salud/documentos/datos-abiertos-152127 <!--[if !supportLists]-->8.
+https://www.gob.mx/salud/documentos/datos-abiertos-152127 <!--[if !supportLists]-->
           </li>
           <li><!--[endif]-->Instituto Nacional de Salud Pública. (2020, 1
 enero).</li>
